test/mutation_analysis/s0392_is_subsequence/hafis/ablation_o3_full/mutants/6/result.txt
./test/mutation_analysis/s0392_is_subsequence/hafis/ablation_o3_full/mutants/6/Solution.java:20: error: unreachable statement
        while (false) {
                      ^
1 error
